
  * Verok Istvan
    - Initial Hungarian translation
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * André Dahlqvist
    - Update Swedish translation. (sv.po)
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)
  * Teófilo Ruiz Suárez
    - Updated Spanish translation (es.po)
    - Switched to UTF-8
  * Alwin Meschede
    - Updated German translation (de.po)

 -- Martin Sjogren <sjogren@debian.org>  Sun, 14 Dec 2003 21:20:23 +0100

ddetect (0.58) unstable; urgency=low

  * Joey Hess
    - Remove the bogus "false" from the end of the modprobe error message
      display.
    - Sort the list of modules for manual selection.
    - Use register-module to register modules for ide and scsi CDROMS,
      so they will be available for base-config.
    - Use register-module to register any module parameters that are entered
      by the user.
    - Fix ethdetect to not write kernel module parameters to
      /target/etc/modules; instead use register-module here too.
    - Add a versioned dep on rootskel.
    - Based on user reports, users are very confused to see the missing
      modules dialog for stuff like ide-floppy, which is both unavailable
      and not autodetected. So leave off non-autodetectable modules from the
      missing modules message.
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Konstantinos Margaritis
    - Initial Greek translation (el.po)
  * Christian Perrier/Chris Tillman
    - Refined and standardized templates. Closes: #219469
  * Safir Šećerović
    - Update Bosnian translation.
  * Christian Perrier
    - Update French translation.
  * Miroslav Kure
    - Update Czech translation.
  * Jordi Mallach
    - Update Catalan translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Ilgiz Kalmetev
    - Update Russian translation. Closes: #221648.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Thiemo Seufer
    - Add support for mips, mipsel to archdetect.