@@ -13,6 +13,8 @@ ddetect (0.59) UNRELEASED; urgency=low
     - Switched to UTF-8
   * Alwin Meschede
     - Updated German translation (de.po)
+  * Marco d'Itri
+    - Add premiminary support for .ko kernel modules.
 
  -- Martin Sjogren <sjogren@debian.org>  Sun, 14 Dec 2003 21:20:23 +0100
 
